--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="py-5">
       <!-- Header - set the background image for the header in the line below -->
     <header class="py-5 bg-image-full" style="background-image: url('./White_BG.png');">
-      <img class="img-fluid d-block mx-auto" src="./SDG_banner.jpg" alt="">
+      <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/MSannat/W209/master/sdg_banner.jpg" alt="">
     </header>
       <div class="container">
         <h3>World Bank Sustainable Development Goals</h3>
