--- a/index.html
+++ b/index.html
@@ -95,8 +95,12 @@
         <p>
           Our project website has several pages. The first is an overview of performance of every country within each of the 17 goals. 
 
-<script type='text/javascript' src='https://us-east-1.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1366px; height: 818px;'><object class='tableauViz' width='1366' height='818' style='display:none;'><param name='host_url' value='https%3A%2F%2Fus-east-1.online.tableau.com%2F' /> <param name='embed_code_version' value='2' /> <param name='site_root' value='&#47;t&#47;midsprojects' /><param name='name' value='w209_SDG_Dashboard&#47;SDG_View' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='showShareOptions' value='true' /></object></div>
-          
+<script type='text/javascript' src='https://us-east-1.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1366px; height: 818px;'><object class='tableauViz' width='1366' height='818' style='display:none;'><param name='host_url' value='https%3A%2F%2Fus-east-1.online.tableau.com%2F' /> <param name='embed_code_version' value='2' /> <param name='site_root' value='&#47;t&#47;midsprojects' /><param name='name' value='w209_SDG_Dashboard&#47;Global_View' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='showShareOptions' value='true' /><param name='display_count' value='no' /></object></div>
+
+
+
+
+
           <a href="https://public.tableau.com/profile/zenobia8180#!/vizhome/w209_SDG_Workbook_circles/Global_View?publish=yes">Global View </a>
 
           From this page, users can navigate to other pages showing performance within individual countries 
@@ -104,6 +108,8 @@
            or within a single goal across countries
             <a href="https://public.tableau.com/profile/zenobia8180#!/vizhome/w209_SDG_Workbook_circles/Global_View?publish=yes">SDG Goal View </a>.
           Finally, a user can view all active international aid programs that are linked to a country and SDG 
+
+          <script type='text/javascript' src='https://us-east-1.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1366px; height: 818px;'><object class='tableauViz' width='1366' height='818' style='display:none;'><param name='host_url' value='https%3A%2F%2Fus-east-1.online.tableau.com%2F' /> <param name='embed_code_version' value='2' /> <param name='site_root' value='&#47;t&#47;midsprojects' /><param name='name' value='w209_SDG_Dashboard&#47;SDG_View' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='showShareOptions' value='true' /></object></div>
           <a href="https://public.tableau.com/profile/zenobia8180#!/vizhome/w209_SDG_Workbook_circles/Global_View?publish=yes">Program View (TBD)</a>.These pages can be accessed from each other.
 
 
