--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
         <h4>Link to Project Website</h4>
         <p>
           Our project website has several pages. The first is an overview of performance of every country within each of the 17 goals. 
+          <br>
 
-    <a href="./global.html">Global View</a>
+    <a href="./global.html" target="_blank>Global View</a>
 
 
 
