--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
       <div class="container">
         <h4>Link to Project Website</h4>
         <p>
-          Our project website has several pages. The first is an overview of performance of every country within each of the 17 goals. 
+          Our project website has several pages. The first is an overview of performance of every country within each of the 17 goals.<br>
+From this page, users can navigate to other pages showing performance within individual countries  or within a single goal across countries.<br>
+Finally, a user can view all active international aid programs that are linked to a country and SDG . These pages can be accessed from each other.
+ 
 <br>
 
-    <a href="./global.html" target="_blank">Global View</a>
-
-
+    <a href="./global.html" target="_blank">Project Web Site - Tableau Online</a> <br>
 
         </p>
       </div>
