--- a/index.html
+++ b/index.html
@@ -97,9 +97,13 @@
 From this page, users can navigate to other pages showing performance within individual countries  or within a single goal across countries.<br>
 Finally, a user can view all active international aid programs that are linked to a country and SDG . These pages can be accessed from each other.
  
-<br>
+<br><br>
 
     <a href="./global.html" target="_blank">Project Web Site - Tableau Online</a> <br>
+
+    <a href="https://public.tableau.com/profile/zenobia8180#!/vizhome/w209_SDG_Dashboard/Global_View?publish=yes" target="_blank">Project Web Site - Tableau Public</a> <br>
+
+    
 
         </p>
       </div>
