--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ Finally, a user can view all active international aid programs that are linked t
  
 <br><br>
 
-    <a href="./global.html" target="_blank">Project Web Site - Tableau Online</a> <br>
+    <a href="./global.html" target="_blank">Project Web Site - Tableau Online</a> <br><br>
 
-    <a href="https://public.tableau.com/profile/zenobia8180#!/vizhome/w209_SDG_Dashboard/Global_View?publish=yes" target="_blank">Project Web Site - Tableau Public</a> <br>
+    <a href="https://public.tableau.com/profile/zenobia8180#!/vizhome/w209_SDG_Dashboard/Global_View?publish=yes" target="_blank">Project Web Site - Tableau Public</a>
 
     
 
