--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="container">
         <h3>World Bank Sustainable Development Goals</h3>
         <p>
-          In the year 2000, all 191 member states of the United Nations adopted the United Nations Millennium Declaration, an agreement to improve various metrics of quality of life around the world by 2015. These metrics were the 8 Millennium Development Goals (MDGs), which included such ideals as the eradication of extreme poverty and hunger, as well as environmental sustainability. Each Goal had several targets, which were in turn each measured by several indicators. In 2016, the MDGs were replaced by the <a href="https://sustainabledevelopment.un.org/?menu=1300">Sustainable Development Goals (SDGs)</a>. The SDGs are comprised of now 17 goals, with 169 targets, and even more indicators to quantify progress. The official data is created and maintained by the World Bank.
+          In the year 2000, all 191 member states of the United Nations adopted the United Nations Millennium Declaration, an agreement to improve various metrics of quality of life around the world by 2015. These metrics were the 8 Millennium Development Goals (MDGs), which included such ideals as the eradication of extreme poverty and hunger, as well as environmental sustainability. Each Goal had several targets, which were in turn each measured by several indicators. In 2016, the MDGs were replaced by the <a href="https://sustainabledevelopment.un.org/?menu=1300" target="_blank">Sustainable Development Goals (SDGs)</a>. The SDGs are comprised of now 17 goals, with 169 targets, and even more indicators to quantify progress. The official data is created and maintained by the World Bank.
 
 
 
